--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.username=root
 spring.datasource.password=ROOT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
+# Caminho da documentação da API 
+springdoc.api-docs.path=/v3/api-docs 
+# Caminho da interface Swagger UI 
+springdoc.swagger-ui.path=/swagger-ui/
